[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/images/Background.png" type="Texture" id=1]
[ext_resource path="res://res/fonts/LargeFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://res/fonts/SmallFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://res/themes/VBoxTheme.tres" type="Theme" id=4]
[ext_resource path="res://src/MainMenu.gd" type="Script" id=5]

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MainMenu:anchor_right")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SettingMenu:anchor_left")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SettingMenu:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=10]
resource_name = "ShowSetting"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("MainMenu:anchor_right")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.5 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SettingMenu:anchor_left")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.5 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SettingMenu:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=7]
resource_name = "EnterGame"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("UI:anchor_right")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("UI:anchor_right")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_lock_": true
}

[node name="UI" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
theme = ExtResource( 4 )

[node name="Title" type="Label" parent="UI"]
margin_right = 480.0
margin_bottom = 260.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "PlaneWar"
align = 1
valign = 1

[node name="Menu" type="Control" parent="UI"]
margin_top = 295.0
margin_right = 480.0
margin_bottom = 556.0
size_flags_vertical = 3

[node name="MainMenu" type="VBoxContainer" parent="UI/Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
rect_min_size = Vector2( 350, 0 )
alignment = 1

[node name="Start" type="Button" parent="UI/Menu/MainMenu"]
margin_left = 65.0
margin_right = 415.0
margin_bottom = 58.0
rect_min_size = Vector2( 350, 0 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
text = "开始"

[node name="Setting" type="Button" parent="UI/Menu/MainMenu"]
margin_left = 65.0
margin_top = 93.0
margin_right = 415.0
margin_bottom = 151.0
rect_min_size = Vector2( 350, 0 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
text = "设置"

[node name="GamePlay" type="Button" parent="UI/Menu/MainMenu"]
margin_left = 65.0
margin_top = 186.0
margin_right = 415.0
margin_bottom = 244.0
rect_min_size = Vector2( 350, 0 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
text = "玩法"

[node name="Quit" type="Button" parent="UI/Menu/MainMenu"]
margin_left = 65.0
margin_top = 279.0
margin_right = 415.0
margin_bottom = 337.0
rect_min_size = Vector2( 350, 0 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
text = "退出"

[node name="SettingMenu" type="VBoxContainer" parent="UI/Menu"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 350, 0 )
alignment = 1

[node name="BGM" type="Button" parent="UI/Menu/SettingMenu"]
margin_left = 65.0
margin_top = 8.0
margin_right = 415.0
margin_bottom = 66.0
rect_min_size = Vector2( 350, 0 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
text = "音乐：开"

[node name="SFX" type="Button" parent="UI/Menu/SettingMenu"]
margin_left = 65.0
margin_top = 101.0
margin_right = 415.0
margin_bottom = 159.0
rect_min_size = Vector2( 350, 0 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
text = "音效：开"

[node name="Back" type="Button" parent="UI/Menu/SettingMenu"]
margin_left = 65.0
margin_top = 194.0
margin_right = 415.0
margin_bottom = 252.0
rect_min_size = Vector2( 350, 0 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
text = "返回"

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/Menu"]
anims/RESET = SubResource( 9 )
anims/ShowSetting = SubResource( 10 )

[node name="Author" type="Label" parent="UI"]
margin_left = 164.0
margin_top = 591.0
margin_right = 480.0
margin_bottom = 852.0
size_flags_horizontal = 8
size_flags_vertical = 11
custom_fonts/font = ExtResource( 3 )
text = "Made by bilipeaches"
align = 1
valign = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "EnterGame"
anims/EnterGame = SubResource( 7 )
anims/RESET = SubResource( 8 )

[connection signal="pressed" from="UI/Menu/MainMenu/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="UI/Menu/MainMenu/Setting" to="." method="_on_Setting_pressed"]
[connection signal="pressed" from="UI/Menu/MainMenu/GamePlay" to="." method="_on_GamePlay_pressed"]
[connection signal="pressed" from="UI/Menu/MainMenu/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="UI/Menu/SettingMenu/BGM" to="." method="_on_BGM_pressed"]
[connection signal="pressed" from="UI/Menu/SettingMenu/SFX" to="." method="_on_SFX_pressed"]
[connection signal="pressed" from="UI/Menu/SettingMenu/Back" to="." method="_on_Back_pressed"]
